extends icons with remove and close, adjusts button

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -374,6 +374,8 @@ $icon-caret-right: "\e91f";
 $icon-caret-bottom: "\e920";
 $icon-caret-left: "\e921";
 $icon-search: "\e922";
+$icon-close: "\e923";
+$icon-remove: "\e924";
 
 
 // Components
