--- a/scss/custom/_facet.scss
+++ b/scss/custom/_facet.scss
@@ -137,9 +137,21 @@
 .facet-selected {
   margin: .25rem;
 
-  .btn {
+  .btn-facet {
+    position: relative;
     width: 100%;
     display: block;
     text-align: left;
+
+    &:after {
+      @include icon;
+
+      content: $icon-remove;
+      position: absolute;
+      top: 0;
+      right: 0;
+      padding: $btn-padding-y $btn-padding-x;
+      background: rgba(255,255,255,.2);
+    }
   }
 }
