--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -427,7 +427,7 @@ $table-border-color:            $gray-lighter !default;
 //
 // For each of Bootstrap's buttons, define text, background and border color.
 
-$btn-padding-x:                  1rem;
+$btn-padding-x:                  .75rem;
 $btn-padding-y:                  .5rem;
 $btn-line-height:                1.25;
 $btn-font-weight:                $font-weight-normal !default;
@@ -1225,3 +1225,7 @@ $facet-group-item-hover-color: $list-group-link-hover-color;
 $facet-group-item-hover-bg: $list-group-hover-bg;
 $facet-group-item-active-color: $list-group-link-active-color;
 $facet-group-item-active-bg: $list-group-link-active-bg;
+
+// Selected Facets
+$facet-highlighted-bg: $brand-secondary;
+$facet-highlighted-color: $white;
