color contrat via yiq method

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -81,6 +81,19 @@
   }
 }
 
+@mixin color-yiq($color) {
+  $r: red($color);
+  $g: green($color);
+  $b: blue($color);
+
+  $yiq: (($r * 299) + ($g * 587) + ($b * 114)) / 1000;
+
+  @if ($yiq >= 128) {
+    color: #111;
+  } @else {
+    color: #fff;
+  }
+}
 
 // General variable structure
 //
