no need for a mixin when we can loop

--- a/scss/utilities/_background.scss
+++ b/scss/utilities/_background.scss
@@ -6,14 +6,13 @@
   background-color: darken($body-bg, 3%);
 }
 
-@include bg-variant('.bg-primary', $brand-primary);
-
-@include bg-variant('.bg-success', $brand-success);
-
-@include bg-variant('.bg-info', $brand-info);
-
-@include bg-variant('.bg-warning', $brand-warning);
-
-@include bg-variant('.bg-danger', $brand-danger);
-
-@include bg-variant('.bg-inverse', $brand-inverse);
+@each $color, $value in $colors {
+  .bg-#{$color} {
+    background-color: $value !important;
+  }
+  a.bg-#{$color} {
+    &:hover {
+      background-color: darken($value, 10%) !important;
+    }
+  }
+}
