--- a/scss/_list-group.scss
+++ b/scss/_list-group.scss
@@ -109,7 +109,7 @@
 // Add modifier classes to change text and background color on individual items.
 // Organizationally, this must come after the `:hover` states.
 
-@include list-group-item-variant(success, $state-success-bg, $state-success-text);
-@include list-group-item-variant(info, $state-info-bg, $state-info-text);
-@include list-group-item-variant(warning, $state-warning-bg, $state-warning-text);
-@include list-group-item-variant(danger, $state-danger-bg, $state-danger-text);
+// @include list-group-item-variant(success, $brand-success, $state-success-text);
+// @include list-group-item-variant(info, $brand-info, $state-info-text);
+// @include list-group-item-variant(warning, $brand-warning, $state-warning-text);
+// @include list-group-item-variant(danger, $brand-danger, $state-danger-text);
