--- a/scss/mixins/_buttons.scss
+++ b/scss/mixins/_buttons.scss
@@ -4,17 +4,25 @@
 // and disabled options for all buttons
 
 @mixin button-variant($color, $background, $border) {
-  $active-background: darken($background, 10%);
-  $active-border: darken($border, 12%);
+  $active-background: darken($background, 7.5%);
+  $active-border: darken($border, 10%);
 
-  color: $color;
+  // @if (lightness($background) < 50%) {
+  //   color: $white;
+  // } @else {
+  //   color: $gray-dark;
+  // }
+
+  @include color-yiq($background);
+
+  // color: $color;
   background-color: $background;
   border-color: $border;
   @include box-shadow($btn-box-shadow);
 
   // Hover and focus styles are shared
   @include hover {
-    color: $color;
+    @include color-yiq($background);
     background-color: $active-background;
     border-color: $active-border;
   }
@@ -38,7 +46,6 @@
   &:active,
   &.active,
   .show > &.dropdown-toggle {
-    color: $color;
     background-color: $active-background;
     background-image: none; // Remove the gradient for the pressed/active state
     border-color: $active-border;
