--- a/docs/assets/scss/_component-examples.scss
+++ b/docs/assets/scss/_component-examples.scss
@@ -210,6 +210,12 @@
 }
 
 // Buttons
+.bd-example {
+  > .btn {
+    margin: .25rem;
+  }
+}
+
 .bd-example > .btn-group {
   margin-top: .25rem;
   margin-bottom: .25rem;
@@ -357,12 +363,12 @@
 
 .bd-example-border-utils {
   [class^="border-"] {
-    display: inline-block;
-    width: 6rem;
-    height: 6rem;
-    margin: .25rem;
-    background-color: #f5f5f5;
-    border: 1px solid;
+    // display: inline-block;
+    // width: 6rem;
+    // height: 6rem;
+    // margin: .25rem;
+    // background-color: #f5f5f5;
+    // border: 1px solid;
   }
 }
 
