start docs for color palette under options
— fill in some colors for now with temp mixes
— make some basic palettes with utilities

--- a/docs/assets/scss/docs.scss
+++ b/docs/assets/scss/docs.scss
@@ -57,6 +57,7 @@ $bd-info:           #5bc0de;
 @import "examples";
 @import "team";
 @import "browser-bugs";
+@import "colors";
 @import "brand";
 @import "clipboard-js";
 
