Add responsive headings

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -15,6 +15,7 @@
 @import "mixins/text-hide";
 @import "mixins/text-truncate";
 @import "mixins/visibility";
+@import "mixins/headings";
 
 // // Components
 @import "mixins/alert";
