--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -2,21 +2,47 @@
 // Headings
 //
 
-h1, h2, h3, h4, h5, h6,
-.h1, .h2, .h3, .h4, .h5, .h6 {
-  margin-bottom: $headings-margin-bottom;
-  font-family: $headings-font-family;
-  font-weight: $headings-font-weight;
-  line-height: $headings-line-height;
-  color: $headings-color;
+h1, h2, h3, h4, h5, h6 {
+  @include heading();
 }
 
-h1, .h1 { font-size: $font-size-h1; }
-h2, .h2 { font-size: $font-size-h2; }
-h3, .h3 { font-size: $font-size-h3; }
-h4, .h4 { font-size: $font-size-h4; }
-h5, .h5 { font-size: $font-size-h5; }
-h6, .h6 { font-size: $font-size-h6; }
+h1 { font-size: $font-size-h1; }
+h2 { font-size: $font-size-h2; }
+h3 { font-size: $font-size-h3; }
+h4 { font-size: $font-size-h4; }
+h5 { font-size: $font-size-h5; }
+h6 { font-size: $font-size-h6; }
+
+@each $breakpoint in map-keys($grid-breakpoints) {
+  @include media-breakpoint-up($breakpoint) {
+    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+    
+    .h1#{$infix} {
+      @include heading();
+      font-size: $font-size-h1;
+    }
+    .h2#{$infix} {
+      @include heading();
+      font-size: $font-size-h2;
+    }
+    .h3#{$infix} {
+      @include heading();
+      font-size: $font-size-h3;
+    }
+    .h4#{$infix} {
+      @include heading();
+      font-size: $font-size-h4;
+    }
+    .h5#{$infix} {
+      @include heading();
+      font-size: $font-size-h5;
+    }
+    .h6#{$infix} {
+      @include heading();
+      font-size: $font-size-h6;
+    }
+  }
+}
 
 .lead {
   font-size: $lead-font-size;
@@ -24,25 +50,31 @@ h6, .h6 { font-size: $font-size-h6; }
 }
 
 // Type display classes
-.display-1 {
-  font-size: $display1-size;
-  font-weight: $display1-weight;
-  line-height: $display-line-height;
-}
-.display-2 {
-  font-size: $display2-size;
-  font-weight: $display2-weight;
-  line-height: $display-line-height;
-}
-.display-3 {
-  font-size: $display3-size;
-  font-weight: $display3-weight;
-  line-height: $display-line-height;
-}
-.display-4 {
-  font-size: $display4-size;
-  font-weight: $display4-weight;
-  line-height: $display-line-height;
+@each $breakpoint in map-keys($grid-breakpoints) {
+  @include media-breakpoint-up($breakpoint) {
+    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
+
+    .display#{$infix}-1 {
+      font-size: $display1-size;
+      font-weight: $display1-weight;
+      line-height: $display-line-height;
+    }
+    .display#{$infix}-2 {
+      font-size: $display2-size;
+      font-weight: $display2-weight;
+      line-height: $display-line-height;
+    }
+    .display#{$infix}-3 {
+      font-size: $display3-size;
+      font-weight: $display3-weight;
+      line-height: $display-line-height;
+    }
+    .display#{$infix}-4 {
+      font-size: $display4-size;
+      font-weight: $display4-weight;
+      line-height: $display-line-height;
+    }
+  }
 }
 
 
