--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -3,7 +3,7 @@
 //
 
 h1, h2, h3, h4, h5, h6 {
-  @include heading();
+  @include heading-defaults();
 }
 
 h1 { font-size: $font-size-h1; }
@@ -13,36 +13,7 @@ h4 { font-size: $font-size-h4; }
 h5 { font-size: $font-size-h5; }
 h6 { font-size: $font-size-h6; }
 
-@each $breakpoint in map-keys($grid-breakpoints) {
-  @include media-breakpoint-up($breakpoint) {
-    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
-    
-    .h1#{$infix} {
-      @include heading();
-      font-size: $font-size-h1;
-    }
-    .h2#{$infix} {
-      @include heading();
-      font-size: $font-size-h2;
-    }
-    .h3#{$infix} {
-      @include heading();
-      font-size: $font-size-h3;
-    }
-    .h4#{$infix} {
-      @include heading();
-      font-size: $font-size-h4;
-    }
-    .h5#{$infix} {
-      @include heading();
-      font-size: $font-size-h5;
-    }
-    .h6#{$infix} {
-      @include heading();
-      font-size: $font-size-h6;
-    }
-  }
-}
+@include make-responsive-headings();
 
 .lead {
   font-size: $lead-font-size;
@@ -50,32 +21,7 @@ h6 { font-size: $font-size-h6; }
 }
 
 // Type display classes
-@each $breakpoint in map-keys($grid-breakpoints) {
-  @include media-breakpoint-up($breakpoint) {
-    $infix: breakpoint-infix($breakpoint, $grid-breakpoints);
-
-    .display#{$infix}-1 {
-      font-size: $display1-size;
-      font-weight: $display1-weight;
-      line-height: $display-line-height;
-    }
-    .display#{$infix}-2 {
-      font-size: $display2-size;
-      font-weight: $display2-weight;
-      line-height: $display-line-height;
-    }
-    .display#{$infix}-3 {
-      font-size: $display3-size;
-      font-weight: $display3-weight;
-      line-height: $display-line-height;
-    }
-    .display#{$infix}-4 {
-      font-size: $display4-size;
-      font-weight: $display4-weight;
-      line-height: $display-line-height;
-    }
-  }
-}
+@include make-display-headings();
 
 
 //
