--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -152,11 +152,15 @@ select.form-control {
 // The `.form-group-* form-control` variations are sadly duplicated to avoid the
 // issue documented in https://github.com/twbs/bootstrap/issues/15074.
 
-.form-control-sm {
+%form-control-sm {
   padding: $input-btn-padding-y-sm $input-btn-padding-x-sm;
   font-size: $font-size-sm;
   line-height: $input-btn-line-height-sm;
   @include border-radius($input-border-radius-sm);
+}
+
+.form-control-sm {
+  @extend %form-control-sm;
 }
 
 select.form-control-sm {
@@ -166,11 +170,15 @@ select.form-control-sm {
   }
 }
 
-.form-control-lg {
+%form-control-lg {
   padding: $input-btn-padding-y-lg $input-btn-padding-x-lg;
   font-size: $font-size-lg;
   line-height: $input-btn-line-height-lg;
   @include border-radius($input-border-radius-lg);
+}
+
+.form-control-lg {
+  @extend %form-control-lg;
 }
 
 select.form-control-lg {
