--- a/scss/_input-group.scss
+++ b/scss/_input-group.scss
@@ -52,12 +52,12 @@
 .input-group-lg > .form-control,
 .input-group-lg > .input-group-addon,
 .input-group-lg > .input-group-btn > .btn {
-  @extend .form-control-lg;
+  @extend %form-control-lg;
 }
 .input-group-sm > .form-control,
 .input-group-sm > .input-group-addon,
 .input-group-sm > .input-group-btn > .btn {
-  @extend .form-control-sm;
+  @extend %form-control-sm;
 }
 
 
