styles prev & next

--- a/scss/custom/_pagination.scss
+++ b/scss/custom/_pagination.scss
@@ -1,9 +1,16 @@
 .pagination {
+  margin: 0;
+  align-items: center;
+  justify-content: center;
 
   .page-link {
     border-color: $pagination-bg;
     border-top: $pagination-active-border-width solid $pagination-bg;
     border-bottom: $pagination-active-border-width solid $pagination-bg;
+
+    @include hover-focus {
+      border-color: $pagination-hover-bg;
+    }
   }
 
   .page-item.disabled .page-link {
@@ -13,5 +20,14 @@
   .active .page-link {
     border-color: $pagination-bg;
     border-bottom-color: $pagination-active-border;
+  }
+
+  .page-prev,
+  .page-next {
+    flex: 1;
+  }
+
+  .page-next {
+    text-align: right;
   }
 }
