adds credit, adds transition

--- a/scss/custom/_floating-input.scss
+++ b/scss/custom/_floating-input.scss
@@ -4,6 +4,8 @@
   // Hide Placeholder on default
   .form-control::placeholder {
     opacity: 0;
+
+    transition: opacity .2s;
   }
 
   .form-label {
