moves variables to the right place

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1229,3 +1229,12 @@ $facet-group-item-active-bg: $list-group-link-active-bg;
 // Selected Facets
 $facet-highlighted-bg: $brand-secondary;
 $facet-highlighted-color: $white;
+
+
+// Floating Input
+// 
+// 
+
+$floating-input-label-size: $font-size-sm;
+$floating-input-label-active-color: $gray-dark;
+$floating-input-label-filled-color: $gray-light;
