--- a/docs/assets/scss/_sidebar.scss
+++ b/docs/assets/scss/_sidebar.scss
@@ -63,7 +63,7 @@
 }
 .bd-toc-link:hover,
 .bd-toc-link:focus {
-  color: $brand-primary;
+  color: $blue;
   text-decoration: none;
 }
 .active > .bd-toc-link {
@@ -94,7 +94,7 @@
 }
 .bd-sidebar .nav > li > a:hover,
 .bd-sidebar .nav > li > a:focus {
-  color: $brand-primary;
+  color: $blue;
   text-decoration: none;
   background-color: transparent;
 }
