--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -93,11 +93,11 @@
 // inheritance to nested tables.
 
 // Generate the contextual variants
-@include table-row-variant(active, $table-bg-active);
-@include table-row-variant(success, $brand-success);
-@include table-row-variant(info, $brand-info);
-@include table-row-variant(warning, $brand-warning);
-@include table-row-variant(danger, $brand-danger);
+@include table-row-variant(blue, $table-blue-bg);
+@include table-row-variant(green, $table-green-bg);
+@include table-row-variant(teal, $table-teal-bg);
+@include table-row-variant(orange, $table-orange-bg);
+@include table-row-variant(red, $table-red-bg);
 
 
 // Inverse styles
