more color updates, grays map

--- a/docs/assets/scss/_colors.scss
+++ b/docs/assets/scss/_colors.scss
@@ -8,3 +8,10 @@
     @include color-yiq($value);
   }
 }
+
+@each $color, $value in $grays {
+  .swatch-#{$color} {
+    background-color: #{$value};
+    @include color-yiq($value);
+  }
+}
