improves dropdown headers

--- a/scss/custom/_dropdown.scss
+++ b/scss/custom/_dropdown.scss
@@ -12,6 +12,8 @@
 }
 
 .dropdown-header {
+  padding-top: $dropdown-item-padding-y * 1.5;
+  padding-bottom: $dropdown-item-padding-y;
   text-transform: uppercase;
 }
 
