--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -661,7 +661,7 @@ $dropdown-header-color:           $gray-light !default;
 
 // CUSTOM: Dropdown
 $dropdown-inverse-divider-bg:           lighten($component-inverse-bg, 10%);
-$dropdown-inverse-header-color:         $gray;
+$dropdown-inverse-header-color:         $gray-lighter;
 
 $dropdown-inverse-link-color:           $gray-lightest;
 $dropdown-inverse-link-hover-color:     lighten($gray-lightest, 10%);
